--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "browser": "./_assets/plugin.js",
   "dependencies": {
     "gitbook-core": "^4.0.0",
+    "html-entities": "1.2.0",
     "algoliasearch": "3.18.1"
   },
   "devDependencies": {
